--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 
   <!-- <link rel="stylesheet" href="css/style.css"> -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css.style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container-fluid yellow">
+    <div class="row">[container-fluid]</div>
+    <div class="row blue border">[header]</div>
+    <div class="row green border">[nav]</div>
+    <div class="row">
+      <div class="col-md-9 red border">[content]</div>
+      <div class="col-md-3 lightblue border">[aside]</div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 orange border">[promo 1]</div>
+      <div class="col-md-3 orange border">[promo 2]</div>
+      <div class="col-md-3 orange border">[promo 3]</div>
+      <div class="col-md-3 orange border">[promo 4]</div>
+    </div>
+    <div class="row black border">[footer]</div>
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
